--- a/index.html
+++ b/index.html
@@ -181,25 +181,26 @@
       Ahora sí... estás habilitado para disfrutar esta experiencia.
     </p>
 
-    <!-- Sección Historia de la Cerveza -->
-    <section id="historia-cerveza">
-      <h2>Nuestra historia 🍺</h2>
-      <p>
-        Todo comenzó un día cualquiera, después de una jornada de trabajo intensa. Como siempre, me senté con mi papá a compartir una cerveza, ese ritual que teníamos para bajar el ritmo y reconectar. Pero hubo un momento en que nos dimos cuenta de algo: <strong>ninguna cerveza nos representaba</strong>.<br><br>
+<!-- Sección Historia de la Cerveza -->
+<section id="historia-cerveza">
+  <h2>Nuestra historia 🍺</h2>
+  <p>
+    Todo comenzó un día cualquiera, después de una jornada larga. De esas en las que sentís el cuerpo cansado, pero el alma tranquila porque diste todo. Como tantas veces, me senté con mi viejo a tomar una cerveza. Era nuestro pequeño ritual al final del día: brindar por lo hecho, por lo aprendido, por lo que todavía soñábamos construir.<br><br>
 
-        Sentíamos que faltaba algo. Que las cervezas que encontrábamos en el mercado no tenían alma, no contaban una historia, no eran parte de un momento real.<br><br>
+    Pero esa vez algo nos hizo ruido. Ninguna cerveza nos hablaba de nosotros. Ninguna contaba el esfuerzo, el sacrificio, la alegría de ver crecer algo propio. Faltaba una cerveza que no fuera solo un producto, sino un símbolo de lo que significa laburar con pasión y convicción.<br><br>
 
-        Ahí nació la idea. ¿Y si hacíamos la nuestra? Una cerveza que no solo sea rica, sino que <strong>cuente quiénes somos</strong>. Una cerveza artesanal hecha con dedicación, pasión y valores familiares.<br><br>
+    Así nació esta idea. La de hacer nuestra propia cerveza. No para competir con nadie, sino para expresar algo más profundo: que <strong>cada uno puede crear, mejorar y dejar su marca</strong>. Que el progreso no viene de esperar, sino de hacer.<br><br>
 
-        Desde entonces, empezamos a experimentar. En la cocina, en el garage, probando recetas, equivocándonos, mejorando, soñando. Hasta que nació la primera tirada. Y la compartimos, como siempre, con los nuestros.<br><br>
+    Arrancamos sin saber mucho, pero con hambre de aprender. Ensayo y error. Mucho trabajo, muchas pruebas, muchas ganas. Y de a poco, como todo lo que vale la pena, fue tomando forma.<br><br>
 
-        Hoy, nuestra cerveza es un homenaje a esos pequeños rituales. A los días largos. A los brindis sinceros. A la familia.<br><br>
+    Hoy, nuestra cerveza representa ese recorrido. <strong>El valor de esforzarse, de crecer por mérito propio, de brindar por cada paso que uno da sin depender de nadie.</strong><br><br>
 
-        <em>Gracias por ser parte de esta historia.</em>
-      </p>
-    </section>
+    <em>Porque creemos que todo sacrificio merece su recompensa.<br>
+    Gracias por ser parte de esta historia.</em>
+  </p>
+</section>
 
-  </div>
+</div>
 </div>
 
   <!-- Resultado No Apto -->
